lagt inn sosiale medier-linker

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <body>
         <header>
             <nav>
-
+                <a href="index.html">LOGO</a>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Portfolio</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </nav>
         </header>
 
@@ -30,6 +36,9 @@
 
         <footer>
             <nav>
+                <li><a href="https://www.facebook.com">Facebook</a></li>
+                <li><a href="https://www.instagram.com">Instagram</a></li>
+                <li><a href="https://www.LinkedIn.com">LinkedIn</a></li>
 
             </nav>
         </footer>
