Lagt inn header-video+tilhørende css

--- a/index.html
+++ b/index.html
@@ -14,13 +14,27 @@
     <body>
         <header>
             <nav>
-                <a href="index.html">LOGO</a>
+                <span>
                 <ul>
+                    <li class="logo"><a href="index.html"><img src="bilder/logo1.png" alt="Et logoikon"></a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+                </span>
+                
+                <!--Koden for å legge til video i header fant jeg via GitHub CoPilot-->
+                <video autoplay loop muted poster="poster.jpg">
+                    <source src="bilder/mountains.mp4" type="video/mp4">
+                </video>
+                <section id="header-index">
+                    <h1>Compeling headline</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    </p>
+                    <button>Read more about our services</button>
+                </section>
             </nav>
         </header>
 
