--- a/products.html
+++ b/products.html
@@ -8,13 +8,25 @@
         <link href="css/icons/css/brands.css" rel="stylesheet">
         <link href="css/icons/css/solid.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500&display=swap" rel="stylesheet">
     </head>
 
 
     <body>
         <header>
             <nav>
-
+                <ul>
+                    <li class="logo">
+                        <a href="index.html">
+                            <img src="bilder/logo1.png" alt="Et logoikon">
+                        </a>
+                    </li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html" class="active">Portfolio</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#" class="contact-link">Contact</a></li>
+                </ul>
             </nav>
         </header>
 
