--- a/about.html
+++ b/about.html
@@ -32,9 +32,69 @@
 
         <main>
             <section>
-                <article>
+                    <img src="bilder/computer.jpg" alt="Bilde av laptop, mobil, headset og kaffekopp" id="bilde-about">
+                    <div id="overlay-box">
+                        <h1 id="overlay-overskrift">Company name</h1>
+                        <p id="overlay-about">About Our Company</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    <a href="about.html" id="contact-button">Get in touch with us</a>
+                    </div>
+            </section>
 
+            <section class="index3">
+                <h3>Our Services</h3>
+                    <a href="#"><i class="fa-solid fa-users" style="color: #000000;"></i>Branding</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#"><i class="fa-solid fa-cloud-arrow-up" style="color: #000000;"></i>Branding</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#"><i class="fa-solid fa-code" style="color: #000000;"></i>Branding</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#"><i class="fa-solid fa-wifi" style="color: #000000;"></i>Branding</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </section>
+
+            <section id="clients">
+                <article>
+                    <h3>Some of our clients</h3>
+                    <img src="bilder/logo1.png" alt="Logoikon 1">
+                    <img src="bilder/logo2.png" alt="Logoikon 2">
+                    <img src="bilder/logo3.png" alt="Logoikon 3">
                 </article>
+            </section>
+            <!--Følgende kode har jeg brukt GitHub CoPilot for å finne ut av-->
+            <section id="skjema">
+                <h3>Contact us</h3>
+                <p>Send us a message</p>
+                <form action="/submit_form" method="post">
+                    <label for="name">Name</label><br>
+                    <input type="text" id="name" name="name" placeholder="Ola Nordmann"><br>
+                    <label for="subject">Subject</label><br>
+                    <input type="text" id="name" name="name" placeholder="Subject"><br>
+                    <label for="message">Message</label><br>
+                    <textarea id="message" name="message"></textarea><br>
+                    <input type="submit" value="Send message">
+                </form>
+            </section>
+
+            <section id="contact-information">
+                <h3>Contact Information</h3>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium 
+                    voluptatum deleniti atque corrupti quos dolores et quas molestias 
+                    excepturi sint.</p>
+                    <ul>
+                        <li><i class="fa-solid fa-location-pin" style="color: #252525;"></i>B R A Veien 4, 1757 Halden</li>
+                        <li><i class="fa-solid fa-phone" style="color: #252525;"></i>69 60 80 00</li>
+                        <li><i class="fa-solid fa-envelope" style="color: #252525;"></i>postmottak@hiof.no</li>
+                    </ul>
+            </section>
+
+            <section>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2047.1884410541143!2d11.350233741435268!3d59.12924747462404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464412f0d344246f%3A0x4e47f19c99b253b1!2zSMO4Z3Nrb2xlbiBpIMOYc3Rmb2xk!5e0!3m2!1sno!2sno!4v1700434352355!5m2!1sno!2sno" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
         </main>
 
@@ -42,7 +102,29 @@
         
         <footer>
             <nav>
+                <section class="logoseksjon">
+                    <img src="bilder/logo1.png" alt="Et logoikon">
+                    <p>Companyrights Companyname 2023</p>
+                </section>
 
+            
+
+            <section class="social-icons">
+                <ul>
+                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i></a></li>
+                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram" style="color: #ffffff;"></i></a></li>
+                    <li><a href="https://www.LinkedIn.com"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a></li>
+                </ul>
+            </section>
+        </nav>
+    </footer>
+    </div>
+    <!--Scroll to top funksjon er hentet fra www.w3schools.com-->
+    <script>
+        function topFunction(){
+            document.documentElement.scrollTop=0;
+            }
+    </script>
             </nav>
         </footer>
     </body>
