Startet å justere media queries

--- a/about.html
+++ b/about.html
@@ -16,16 +16,15 @@
     <body>
         <header>
             <nav>
+                <span>
+                    <a href="index.html" class="logo">
+                    <img src="bilder/logo1.png" alt="Et logoikon"></a>
+                </span>
                 <ul>
-                    <li class="logo">
-                        <a href="index.html">
-                            <img src="bilder/logo1.png" alt="Et logoikon">
-                        </a>
-                    </li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Portfolio</a></li>
                     <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="#" class="contact-link">Contact</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
