--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <div id="grid-container">
         <header>
             <nav>
+                <span>
+                    <a href="index.html" class="logo">
+                    <img src="bilder/logo1.png" alt="Et logoikon"></a>
+                </span>
                 <ul>
-                    <li class="logo">
-                        <a href="index.html">
-                            <img src="bilder/logo1.png" alt="Et logoikon"></a></li>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="products.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
@@ -31,23 +32,24 @@
         </header>
 
         <main>
-        <section>
-            <!--Koden for å legge til video i header fant jeg via GitHub CoPilot-->
-            <video autoplay loop muted poster="poster.jpg" class="video">
-                <source src="bilder/mountains.mp4" type="video/mp4">
-            </video>
+            <section>
 
-            <div class="header-index">
-            <img src="bilder/computer.jpg" alt="Bilde av laptop, mobil, headset og kaffekopp" id="bilde-index">
-            <div id="overlay-text">
-            <h1>Compelling headline</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                </p>
-            <a href="about.html" class="button1">Read more about our services</a>
-            </div>
-            </div>
-        </section>
+    
+                <div class="header-index">
+                                    <!--Koden for å legge til video i header fant jeg via GitHub CoPilot-->
+                <video autoplay loop muted poster="poster.jpg" class="video">
+                    <source src="bilder/mountains.mp4" type="video/mp4">
+                </video>
+                <img src="bilder/computer.jpg" alt="Bilde av laptop, mobil, headset og kaffekopp" class="bilde-index">
+                <div class="overlay-text">
+                <h1>Compelling headline</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    </p>
+                <a href="about.html" class="button1">Read more about our services</a>
+                </div>
+                </div>
+            </section>
 
             <section class="index1">
                 <article>
@@ -61,6 +63,8 @@
             <section class="index2">
                 <article>
                     <img src="https://placehold.co/400x400" alt="Et grått placeholderbilde">
+                </article>
+                <article>
                     <h2>About Our Company</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
