--- a/products.html
+++ b/products.html
@@ -15,21 +15,20 @@
 
     <body>
         <div id="grid-container">
-        <header>
-            <nav>
-                <ul>
-                    <li class="logo">
-                        <a href="index.html">
-                            <img src="bilder/logo1.png" alt="Et logoikon">
-                        </a>
-                    </li>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html" class="active">Portfolio</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#" class="contact-link">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+            <header>
+                <nav>
+                    <span>
+                        <a href="index.html" class="logo">
+                        <img src="bilder/logo1.png" alt="Et logoikon"></a>
+                    </span>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="products.html" class="active">Portfolio</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
 
         <main>
             <section>
@@ -41,8 +40,8 @@
                 </div>
             </section>
 
+            <h2 class="underline">Explore previous jobs</h2>
             <section class="portfolio-seksjon">
-                <h2 class="underline">Explore previous jobs</h2>
                 <ul>
                     <li><a href="branding" class="port-buttons">Branding</a></li>
                     <li><a href="design" class="port-buttons">Design</a></li>
@@ -50,8 +49,8 @@
                 </ul>
             </section>
             
+            <h3 class="underline">Branding</h3>
             <section class="portfolio-seksjon">
-                <h3 class="underline">Branding</h3>
                 <article>
                     <img src="https://placehold.co/400x400" alt="Et grått placeholderbilde">
                     <h4>Et harum quidem</h4>
@@ -68,8 +67,8 @@
                 </article>
             </section>
 
+            <h3 class="underline">Design</h3>
             <section class="portfolio-seksjon">
-                <h3 class="underline">Design</h3>
                 <article>
                     <img src="https://placehold.co/400x400" alt="Et grått placeholderbilde">
                     <h4>Et harum quidem</h4>
@@ -91,8 +90,8 @@
                 </article>
             </section>
 
+            <h3 class="underline">Development</h3>
             <section class="portfolio-seksjon">
-                <h3 class="underline">Development</h3>
                 <article>
                     <img src="https://placehold.co/400x400" alt="Et grått placeholderbilde">
                     <h4>Et harum quidem</h4>
