Lagt på mer media queries
Gjort noen endringer i html-dokumentene også, ryddet opp i deler av koden. samme i css-fila

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 <img src="bilder/computer.jpg" alt="Bilde av laptop, mobil, headset og kaffekopp" class="bilde-index">
                 <div class="overlay-text">
                 <h1>Compelling headline</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut<br>labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                 <a href="about.html" class="button1">Read more about our services</a>
                 </div>
                 </div>
@@ -55,7 +53,7 @@
                 <article>
                     <h2>Enganging subheading. What can you help your visitors with?</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        sed do eiusmod tempor incididunt ut<br>labore et dolore magna aliqua. 
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                 </article>
             </section>
@@ -67,22 +65,26 @@
                 <article>
                     <h2>About Our Company</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    sed do<br>eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> 
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                     <a href="about.html">Read more about us</a>
                 </article>
             </section>
 
             <section class="index3">
-                <h3>Our Services</h3>
-                    <a href="#"><i class="fa-solid fa-users" style="color: #000000;"></i>Branding</a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#"><i class="fa-solid fa-cloud-arrow-up" style="color: #000000;"></i>Branding</a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#"><i class="fa-solid fa-code" style="color: #000000;"></i>Branding</a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#"><i class="fa-solid fa-wifi" style="color: #000000;"></i>Branding</a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <article>
+                    <h3>Our Services</h3>
+                    <ul>
+                    <li><a href="#"><i class="fa-solid fa-users" style="color: #000000;"></i>Branding</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                   <li><a href="#"><i class="fa-solid fa-cloud-arrow-up" style="color: #000000;"></i>Branding</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                    <li><a href="#"><i class="fa-solid fa-code" style="color: #000000;"></i>Branding</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                    <li><a href="#"><i class="fa-solid fa-wifi" style="color: #000000;"></i>Branding</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                </ul>
+                </article>
             </section>
         </main>
 
@@ -92,30 +94,27 @@
             <nav>
                 <!--Scroll to top funksjon er hentet fra www.w3schools.com-->
                 <button onClick="topFunction()" id="top" title="Go to top"><i class="fa-solid fa-arrow-up" style="color: #ffffff;"></i></button>
-                <section class="newsletter">
-                    <article>
+                    <article class="newsletter">
                         <h4>Sign up for our newsletter</h4>
                         <form>
                             <input type="email" placeholder="oda@epost.no" required>
                             <button type="submit">Sign me up!</button>
                         </form>
                     </article>
-                </section>
 
-                    <section class="logoseksjon">
-                        <img src="bilder/logo1.png" alt="Et logoikon">
-                        <p>Companyrights Companyname 2023</p>
-                    </section>
 
                 
-
-                <section class="social-icons">
+                    <div class="footer-flex">
+                    <span>
+                        <img src="bilder/logo1.png" alt="Et logoikon">
+                    </span>
+                        <p>Companyrights Companyname 2023</p>
                     <ul>
                         <li><a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i></a></li>
                         <li><a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram" style="color: #ffffff;"></i></a></li>
                         <li><a href="https://www.LinkedIn.com"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a></li>
                     </ul>
-                </section>
+                </div>
             </nav>
         </footer>
         </div>
